Search text truncating issue.

--- a/MobileFiles/www/css/style.css
+++ b/MobileFiles/www/css/style.css
@@ -330,7 +330,7 @@ form sup{
     padding-left: 42px;
 }
 .slider-pager .slider-pager-page.active{
-    color: #F37365;
+    color:#F37365;
 }
 .slider-pager .slider-pager-page{
     color: #49514D;
@@ -345,9 +345,14 @@ form sup{
     list-style:square; margin-left:17px;
     font-size: 13px;
 }
-
+/* search */
+.list .item.text-center {
+    white-space: normal;
+    overflow: none;
+    text-overflow: none;
+    font-size: 13px;
+}
 /* user details */
-
 .icon_size{
     font-size:30px;
 }
